// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when desktop width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when mobile width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--search"
  />
  <div
    className="consonant-filters-info--btn-wrapper"
    data-testid="btn-wrapper"
  >
    <button
      className="consonant-filters-info--btn"
      data-testid="info-btn"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="consonant-filters-info--btn-ico"
      />
      <span
        className="consonant-filters-info--btn-text"
      >
        filters
      </span>
    </button>
  </div>
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with search 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with select 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with two children 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;
